# backend/src/core/http-schemas/customer/entities.ts
@@ -4,11 +4,11 @@ import { z } from 'zod'
 export const Customer = z
   .object({
     id: z.string(),
-    first_name: z.string(),
-    last_name: z.string(),
+    firstName: z.string(),
+    lastName: z.string(),
     email: z.string(),
-    created_at: z.string(),
-    updated_at: z.string(),
-    deleted_at: z.string().nullable(),
+    createdAt: z.string(),
+    updatedAt: z.string(),
+    deletedAt: z.string().nullable(),
   })
   .openapi('Customer')
