# backend/src/core/types/customer/common.ts
@@ -2,46 +2,46 @@ import type { BaseFilterable, OperatorMap } from '../common.js'
 
 export type CustomerDTO = {
   id: string
-  first_name: string
-  last_name: string
+  firstName: string
+  lastName: string
   email: string
-  created_at: Date
-  updated_at: Date
-  deleted_at: Date | null
+  createdAt: Date
+  updatedAt: Date
+  deletedAt: Date | null
 }
 
 export interface FilterableCustomerProps extends BaseFilterable<FilterableCustomerProps> {
   id?: string | string[]
   email?: string | string[] | OperatorMap<string>
-  first_name?: string | OperatorMap<string>
-  last_name?: string | OperatorMap<string>
-  created_at?: OperatorMap<Date>
-  updated_at?: OperatorMap<Date>
+  firstName?: string | OperatorMap<string>
+  lastName?: string | OperatorMap<string>
+  createdAt?: OperatorMap<Date>
+  updatedAt?: OperatorMap<Date>
 }
 
 export interface FilterableCustomerAddressProps extends BaseFilterable<FilterableCustomerAddressProps> {
   id?: string | string[]
-  customer_id?: string | string[]
+  customerId?: string | string[]
 }
 
 export type CustomerAddressDTO = {
   id: string
-  customer_id: string
-  address_name: string | null
-  is_default_shipping: boolean
-  is_default_billing: boolean
+  customerId: string
+  addressName: string | null
+  isDefaultShipping: boolean
+  isDefaultBilling: boolean
   company: string | null
-  first_name: string | null
-  last_name: string | null
-  address_1: string | null
-  address_2: string | null
+  firstName: string | null
+  lastName: string | null
+  address1: string | null
+  address2: string | null
   city: string | null
-  country_code: string | null
+  countryCode: string | null
   province: string | null
-  postal_code: string | null
+  postalCode: string | null
   phone: string | null
   metadata: string | null
-  created_at: Date
-  updated_at: Date
-  deleted_at: Date | null
+  createdAt: Date
+  updatedAt: Date
+  deletedAt: Date | null
 }
