# backend/src/core/types/user/common.ts
@@ -4,15 +4,15 @@ export type UserDTO = {
   id: string
   email: string
   name: string
-  created_at: Date
-  updated_at: Date
-  deleted_at: Date | null
+  createdAt: Date
+  updatedAt: Date
+  deletedAt: Date | null
 }
 
 export interface FilterableUserProps extends BaseFilterable<FilterableUserProps> {
   id?: string | string[]
   email?: string | string[] | OperatorMap<string>
   name?: string | OperatorMap<string>
-  created_at?: OperatorMap<Date>
-  updated_at?: OperatorMap<Date>
+  createdAt?: OperatorMap<Date>
+  updatedAt?: OperatorMap<Date>
 }
