# backend/src/modules/customer/models/customer.ts
@@ -4,14 +4,14 @@ import { pgEnum, pgTable, text, timestamp } from 'drizzle-orm/pg-core'
 export const customerStatusEnum = pgEnum('customer_status', ['active', 'inactive'])
 
 export const customerTable = pgTable('customer', {
-  id: text('id').primaryKey().default(sql`CONCAT('cus_', REPLACE(gen_random_uuid()::text, '-', ''))`),
-  first_name: text('first_name').notNull(),
-  last_name: text('last_name').notNull(),
-  email: text('email').notNull().unique(),
-  status: customerStatusEnum('status').default('active').notNull(),
-  created_at: timestamp('created_at').defaultNow().notNull(),
-  updated_at: timestamp('updated_at').defaultNow().notNull(),
-  deleted_at: timestamp('deleted_at'),
+  id: text().primaryKey().default(sql`CONCAT('cus_', REPLACE(gen_random_uuid()::text, '-', ''))`),
+  firstName: text().notNull(),
+  lastName: text().notNull(),
+  email: text().notNull().unique(),
+  status: customerStatusEnum().default('active').notNull(),
+  createdAt: timestamp().defaultNow().notNull(),
+  updatedAt: timestamp().defaultNow().notNull(),
+  deletedAt: timestamp(),
 })
 
 export type Customer = typeof customerTable.$inferSelect
